// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file main.spec should  1`] = `
"function lodash() {
  const a = 9;
}
"
`;

exports[`file main.spec несколько пробелов 1`] = `
function lodash() {
  const a = 9;
}
"
`;
